# kaggle-tree-packing-2025

./: .gitignore  README.md  christmas_tree.py  main.py  metric.py  plotter.py  pyproject.toml  sample_submission.csv  solution.ipynb  solution.py  solver.py  submission.csv  submission.py  submission_best.csv  summary.csv  tree.py  trees.py
christmas_tree/: christmas_tree.py
metric/: metric.py
plotter/: plotter.py
solver/: solver.py
submission/: submission.py
