[project]
name = "tree"
version = "0.1.0"
description = ""
authors = [
    {name = "Helder Geovane Gomes de Lima",email = "he7d3r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.3)",
    "numpy (==1.26.4)",
    "matplotlib (==3.7.2)",
    "shapely (==2.1.2)",
    "jupyterlab (>=4.5.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)"
]

[tool.ruff]
line-length = 80
indent-width = 4
exclude=[
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "data"
]
