[project]
name = "tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "jupyterlab>=4.5.0,<5.0.0",
    "matplotlib==3.7.2",
    "mlflow>=3.6.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "shapely==2.1.2",
    "tqdm>=4.67.1,<5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scalene>=1.5.55",
    "snakeviz>=2.2.2",
]

[tool.ruff]
line-length = 80
indent-width = 4
exclude=[
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "data"
]
